--- a/tiny_mrp/mrp/templates/mrp/blank-page.html
+++ b/tiny_mrp/mrp/templates/mrp/blank-page.html
@@ -864,6 +864,8 @@
 <!-- begin::custom scripts -->
 <script src="{% static 'assets/js/custom.js' %}"></script>
 <script src="{% static 'assets/js/app.min.js' %}"></script>
+{% block javascript %}
+{% endblock %}
 <!-- end::custom scripts -->
 
 </body>
