--- a/tiny_mrp/mrp/templates/mrp/tolid/details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details.html
@@ -174,8 +174,13 @@
 
                 </div>
             </div>
-            {% load static %}
 
-             <script src="{% static 'project/tolid.js' %}"></script>
 
+{% endblock %}
+{% load static %}
+
+{% block javascript %}
+
+
+ <script src="{% static 'project/tolid.js' %}"></script>
 {% endblock %}
