--- a/tiny_mrp/mrp/templates/mrp/blank-page.html
+++ b/tiny_mrp/mrp/templates/mrp/blank-page.html
@@ -16,7 +16,7 @@
   <!-- App styles -->
   <link rel="stylesheet" href="{%  static 'assets/css/app.min.css' %}" type="text/css">
 </head>
-<body>
+<body class="navigation-toggle-one">
 
   <!-- begin::preloader-->
   <div class="preloader">
@@ -755,7 +755,7 @@
         </li>
       </ul>
     </div>
-    <div class="open" id="pages">
+    <div  id="pages">
       <ul>
         <li class="navigation-divider">صفحات</li>
         <li><a href="login.html">ورود</a></li>
