adding save btn ui

--- a/tiny_mrp/mrp/templates/mrp/tolid/details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details.html
@@ -11,6 +11,9 @@
                                 <label class="custom-control-label" for="customCheckAll"></label>
                             </div>
                             <ul class="list-inline">
+                              <li class="list-inline-item mb-0">
+                                <button type="button" name="button" class="btn btn-outline-light">ذخیره</button>
+                              </li>
                                 <li class="list-inline-item mb-0">
                                     <a href="#" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
                                         انتخاب بر اساس
@@ -23,6 +26,7 @@
                                         <a class="dropdown-item text-danger" href="#">حذف</a>
                                     </div>
                                 </li>
+
                                 <li class="list-inline-item mb-0">
                                     <a href="#" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
 چینش                                     </a>
