--- a/tiny_mrp/mrp/templates/mrp/tolid/details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details.html
@@ -12,7 +12,7 @@
                             </div>
                             <ul class="list-inline">
                               <li class="list-inline-item mb-0">
-                                <button type="button" name="button" class="btn btn-outline-light">ذخیره</button>
+                                <button type="button" name="button" class="btn btn-outline-light" id="save_production">ذخیره</button>
                               </li>
                                 <li class="list-inline-item mb-0">
                                     <a href="#" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
@@ -86,7 +86,7 @@
 
                               <h3>{{i.name}}</h3>
                               <div class="table-responsive">
-                                <table class="table table-bordered table-striped company-table" >
+                                <table class="table table-bordered table-striped company-table" id="tbl1">
                                   <thead class="thead-dark">
                                     <tr>
                                       <th>نام ماشین</th>
@@ -98,12 +98,12 @@
                                   </thead>
                                   <tbody>
                                     {% for c in machines %}
-                                    <tr data-shift="{{i.id}}" data-speed="{{i.speed}}">
+                                    <tr data-machine={{c.machine.id}} data-shift="{{i.id}}" data-speed="{{c.speed}}">
                                       <td>{{c.machine.assetName}}</td>
                                       <td contenteditable="true" class="editable-cell btc nomre selectable1">{{c.nomre}}</td>
                                       <td contenteditable="true" class="editable-cell btc counter selectable1"></td>
 
-                                      <td contenteditable="true" data-formula="{{c.formula}}"></td>
+                                      <td contenteditable="true" data-formula="{{c.formula}}" class='production'></td>
 
                                     </tr>
                                     {% endfor %}
@@ -117,7 +117,7 @@
 
                               <h3>{{i.name}}</h3>
                               <div class="table-responsive">
-                                <table class="table table-bordered table-striped company-table" >
+                                <table class="table table-bordered table-striped company-table" id="tbl{{forloop.counter}}">
                                   <thead class="thead-dark">
                                     <tr>
 
@@ -128,11 +128,11 @@
                                   </thead>
                                   <tbody>
                                     {% for c in machines %}
-                                    <tr data-machine={{c.machine.id}} data-shift="{{i.id}}">
+                                    <tr data-machine={{c.machine.id}} data-shift="{{i.id}}" data-speed="{{c.speed}}">
 
-                                      <td contenteditable="true" class="editable-cell btc counter selectable1"></td>
+                                      <td contenteditable="true" class="editable-cell btc counter selectable1" data-nomre={{c.nomre}}></td>
 
-                                      <td contenteditable="true" data-formula="{{c.formula}}"></td>
+                                      <td contenteditable="true" data-formula="{{c.formula}}" class='production'></td>
 
                                     </tr>
                                     {% endfor %}
@@ -145,7 +145,7 @@
                             {% endfor %}
                             <div class="col-md-2">
 
-                             <h3 >تولید بر اساس سرعت</h3>
+                             <h3 >تولید + سرعت</h3>
 
                               <div class="table-responsive">
                                 <table class="table table-bordered table-striped company-table" >
