--- a/tiny_mrp/mrp/templates/mrp/blank-page.html
+++ b/tiny_mrp/mrp/templates/mrp/blank-page.html
@@ -20,6 +20,8 @@
 
 <link rel="stylesheet" href="{%  static 'vendors/datepicker/daterangepicker.css' %}">
 <link rel="stylesheet" href="{%  static 'assets/Datepiker/persian-datepicker.css' %}">
+{% block stylesheet %}
+{% endblock %}
 
 </head>
 <body class="navigation-toggle-one">
