--- a/tiny_mrp/mrp/templates/mrp/tolid/calendar_main.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/calendar_main.html
@@ -4,6 +4,12 @@
 
 {% block stylesheet %}
  <link href="{% static 'assets/css/fullcalendar.min.css' %}" rel="stylesheet" type="text/css">
+ <style media="screen">
+   .fc-event {
+  direction: rtl;
+  text-align: right; /* Optional: Align text to the right */
+}
+ </style>
 {% endblock %}
 <!-- Fullcalendar -->
 
