--- a/tiny_mrp/mrp/templates/mrp/blank-page.html
+++ b/tiny_mrp/mrp/templates/mrp/blank-page.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>بورداش - قالب داشبرد ادمین</title>
+  <title>سیستم مدیریت تولید دیانا-- سرورایان</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="{% static 'assets/media/image/favicon.png' %}"/>
