--- a/tiny_mrp/mrp/templates/mrp/blank-page.html
+++ b/tiny_mrp/mrp/templates/mrp/blank-page.html
@@ -49,16 +49,16 @@
   <!-- begin::page-header -->
   <div class="page-header">
     <div class="container-fluid d-sm-flex justify-content-between">
-      <h4>صفحه خالی</h4>
+      <h4>{{title}}</h4>
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="#">داشبرد</a>
+            <a href="#">اطلاعات</a>
           </li>
           <li class="breadcrumb-item">
             <a href="#">صفحات</a>
           </li>
-          <li class="breadcrumb-item active" aria-current="page">صفحه خالی</li>
+          <li class="breadcrumb-item active" aria-current="page">{{title}}</li>
         </ol>
       </nav>
     </div>
