--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -44,7 +44,7 @@
               </a> -->
               <!-- <a href="#" class="list-group-item" data-sidebar-target="#settings">صورتحساب</a>
               <a href="#" class="list-group-item" data-sidebar-target="#settings">راهنمایی?</a> -->
-              <a href="#" class="list-group-item text-danger" data-sidebar-target="#settings">خروج</a>
+              <a href="{% url 'logout' %}" class="list-group-item text-danger" data-sidebar-target="#settings">خروج</a>
             </div>
           </div>
         </div>
@@ -53,27 +53,17 @@
     <div class="flex-grow-1">
       <ul>
         <li>
-          <a href="#" data-toggle="tooltip" data-placement="right" title="داشبردها"
+          <a href="#" data-toggle="tooltip" data-placement="right" title="اطلاعات"
           data-nav-target="#dashboards">
           <i data-feather="bar-chart-2"></i>
         </a>
       </li>
       <li>
-        <a href="#" data-toggle="tooltip" data-placement="right" title="اپ ها" data-nav-target="#apps">
+        <a href="#" data-toggle="tooltip" data-placement="right" title="تنظیمات" data-nav-target="#apps">
           <i data-feather="command"></i>
         </a>
       </li>
-      <li>
-        <a href="#" data-toggle="tooltip" data-placement="right" title="عناصر رابط کاربری"
-        data-nav-target="#elements">
-        <i data-feather="layers"></i>
-      </a>
-    </li>
-    <li>
-      <a class="active" href="#" data-toggle="tooltip" data-placement="right" title="صفحات" data-nav-target="#pages">
-        <i data-feather="copy"></i>
-      </a>
-    </li>
+
   </ul>
 </div>
 <div>
@@ -84,7 +74,7 @@
       </a>
     </li>
     <li>
-      <a href="login.html" data-toggle="tooltip" data-placement="right" title="خروج">
+      <a href="{% url 'logout' %}" data-toggle="tooltip" data-placement="right" title="خروج">
         <i data-feather="log-out"></i>
       </a>
     </li>
@@ -110,228 +100,40 @@
 
   <div id="dashboards">
     <ul>
-      <li class="navigation-divider">داشبردها</li>
-      <li><a href="index.html">CRM سیستم</a></li>
-      <li><a href="dashboard-two.html">ایکامرس<span class="badge badge-danger">2</span></a></li>
-      <li><a href="dashboard-three.html">آنالیستیک</a></li>
-      <li><a href="dashboard-four.html">مدیریت پروژه</a></li>
-      <li><a href="dashboard-five.html">مدیریت هلپ‌دسک</a></li>
-      <li class="navigation-divider">مخاطبان</li>
-      <li>
-        <div class="list-group list-group-flush">
-          <a href="#" class="list-group-item d-flex align-items-center">
-            <div>
-              <div class="avatar avatar-sm m-r-10">
-                <img src="{% static 'assets/media/image/user/man_avatar1.jpg' %}" class="rounded-circle" alt="image">
-              </div>
-            </div>
-            <span>علی احمدی</span>
-          </a>
-          <a href="#" class="list-group-item d-flex align-items-center">
-            <div>
-              <div class="avatar avatar-sm m-r-10">
-                <img src="{% static 'assets/media/image/user/women_avatar2.jpg' %}" class="rounded-circle" alt="image">
-              </div>
-            </div>
-            <span>الهه جم </span>
-          </a>
-          <a href="#" class="list-group-item d-flex align-items-center">
-            <div>
-              <div class="avatar avatar-sm m-r-10">
-                <img src="{% static 'assets/media/image/user/women_avatar4.jpg' %}" class="rounded-circle" alt="image">
-              </div>
-            </div>
-            <span>کیمیا فروزش</span>
-          </a>
-        </div>
-      </li>
-      <li class="navigation-divider">دنبال‌کنندگان</li>
-      <li>
-        <div class="avatar-group ml-4">
-          <a href="#" class="avatar">
-            <span class="avatar-title bg-success rounded-circle">آ</span>
-          </a>
-          <a href="#" class="avatar">
-            <img src="{% static 'assets/media/image/user/women_avatar5.jpg' %}" class="rounded-circle" alt="avatar">
-          </a>
-          <a href="#" class="avatar">
-            <img src="{% static 'assets/media/image/user/women_avatar2.jpg' %}" class="rounded-circle" alt="avatar">
-          </a>
-          <a href="#" class="avatar">
-            <span class="avatar-title bg-info rounded-circle">س</span>
-          </a>
-          <a href="#" class="avatar">
-            <span class="avatar-title bg-dark rounded-circle">+30</span>
-          </a>
-        </div>
-      </li>
+      <li class="navigation-divider">اطلاعات</li>
+      <li><a href="{% url 'index' %}">ورود اطلاعات روزانه</a></li>
+      <li><a href="{% url 'calendar_main' %}">مشاهده آمار روزانه<span class="badge badge-danger">2</span></a></li>
+      <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید</a></li>
+      <li><a href="{% url 'calendar_tahlil' %}">تحلیل تولید روزانه</a></li>
+
+
+
     </ul>
   </div>
   <div id="apps">
     <ul>
-      <li class="navigation-divider">اپ های وب</li>
+      <li class="navigation-divider">تنظیمات</li>
       <li>
-        <a href="chat.html">
-          <span>چت</span>
-          <span class="badge badge-danger">5</span>
+        <a href="{% url 'list_shifts' %}">
+          <span>شیفت ها</span>
+
         </a>
       </li>
       <li>
-        <a href="inbox.html">
-          <span>ایمیل</span>
+        <a href="{% url 'list_formula' %}">
+          <span>فرمولهای تولید</span>
         </a>
       </li>
       <li>
-        <a href="app-todo.html">
-          <span>تو دو</span>
+        <a href="{% url 'list_speed_formula' %}">
+          <span>فرمولهای سرعت</span>
           <span class="badge badge-warning">2</span>
         </a>
       </li>
-      <li>
-        <a class="active" href="file-manager.html">
-          <span>فایل منیجر</span>
-        </a>
-      </li>
-      <li>
-        <a href="calendar.html">
-          <span>تقویم</span>
-        </a>
-      </li>
-    </ul>
-  </div>
-  <div id="elements">
-    <ul>
-      <li class="navigation-divider">عناصر رابط کاربری</li>
-      <li>
-        <a href="#">پایه</a>
-        <ul>
-          <li><a href="alerts.html">پیام</a></li>
-          <li><a href="accordion.html">آکاردیون</a></li>
-          <li><a href="buttons.html">دکمه‌ها</a></li>
-          <li><a href="dropdown.html">دراپ‌داون</a></li>
-          <li><a href="list-group.html">گروه لیستی</a></li>
-          <li><a href="pagination.html">صفحه‌بندی</a></li>
-          <li><a href="typography.html">تایپوگرافی</a></li>
-          <li><a href="media-object.html">مدیا ابجکت</a></li>
-          <li><a href="progress.html">وضعیت پیشرفت</a></li>
-          <li><a href="modal.html"> مودال </a></li>
-          <li><a href="spinners.html">اسنیپرز</a></li>
-          <li><a href="navs.html">نویگیشن‌ها</a></li>
-          <li><a href="tab.html">تب</a></li>
-          <li><a href="tooltip.html">تولتیپ</a></li>
-          <li><a href="popovers.html">پاپ‌اور ها</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">کارت‌ها</a>
-        <ul>
-          <li><a href="basic-cards.html">کارت‌های پایه </a></li>
-          <li><a href="image-cards.html">کارت‌های تصویردار</a></li>
-          <li><a href="card-scroll.html">کارت‌ همراه با اسکرول</a></li>
-          <li><a href="other-cards.html">کارت‌های دیگر</a></li>
-        </ul>
-      </li>
-      <li><a href="avatar.html">آواتور</a></li>
-      <li><a href="icons.html">ایکن‌ها</a></li>
-      <li><a href="colors.html">رنگ‌ها</a></li>
-      <li>
-        <a href="#">پلاگین</a>
-        <ul>
-          <li><a href="sweet-alert.html">سوییت الرت</a></li>
-          <li><a href="lightbox.html">لایت باکس</a></li>
-          <li><a href="toast.html">توست</a></li>
-          <li><a href="tour.html">تور</a></li>
-          <li><a href="slick-slide.html">اسلیک اسلاید</a></li>
-          <li><a href="nestable.html"> نست‌ایبل </a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">فرمها</a>
-        <ul>
-          <li><a href="basic-form.html">چینش فرم</a></li>
-          <li><a href="custom-form.html">فرم سفارشی</a></li>
-          <li><a href="advanced-form.html">فرم پیشرفته</a></li>
-          <li><a href="form-validation.html">اعتبارسنجی</a></li>
-          <li><a href="form-wizard.html">ویزارد</a></li>
-          <li><a href="file-upload.html">آپلود فایل</a></li>
-          <li><a href="datepicker.html">انتخابگر تاریخ</a></li>
-          <li><a href="timepicker.html">انتخابگر زمان</a></li>
-          <li><a href="colorpicker.html">انتخابگر رنگ</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">جدول‌ها</a>
-        <ul>
-          <li><a href="tables.html">جدول پایه</a></li>
-          <li><a href="data-table.html">جدول داده‌ای</a></li>
-          <li><a href="responsive-table.html">جدول رسپانسیو</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">نمودارها</a>
-        <ul>
-          <li><a href="apexchart.html">اپکس</a></li>
-          <li><a href="chartjs.html">چارت جی‌اس</a></li>
-          <li><a href="justgage.html">چارت جاستگیگ</a></li>
-          <li><a href="morsis.html">چارت مورسیس</a></li>
-          <li><a href="peity.html">چارت پتی</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">نقشه</a>
-        <ul>
-          <li><a href="google-map.html">گوگل</a></li>
-          <li><a href="vector-map.html">وکتور</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-  <div  id="pages">
-    <ul>
-      <li class="navigation-divider">صفحات</li>
-      <li><a href="login.html">ورود</a></li>
-      <li><a href="register.html">ثبت‌نام</a></li>
-      <li><a href="recover-password.html">بازگردانی رمزعبور</a></li>
-      <li><a href="lock-screen.html">قفل صفحه</a></li>
-      <li><a href="profile.html">پروفایل</a></li>
-      <li><a href="timeline.html">تایملاین</a></li>
-      <li><a href="invoice.html">صورت‌حساب</a></li>
 
-      <li><a href="pricing-table.html">جدول قیمت</a></li>
-      <li><a href="search-result.html">نتایج جستجو</a></li>
-      <li>
-        <a href="#">صفحات خطا</a>
-        <ul>
-          <li><a href="404.html">404</a></li>
-          <li><a href="404-2.html">404ورژن2</a></li>
-          <li><a href="503.html">503</a></li>
-          <li><a href="mean-at-work.html">در حال ساخت</a></li>
-        </ul>
-      </li>
-      <li><a class="active" href="blank-page.html">صفحه شروع</a></li>
-      <li>
-        <a href="#">قالب ایمیل</a>
-        <ul>
-          <li><a href="email-template-basic.html">پایه</a></li>
-          <li><a href="email-template-alert.html">پیام</a></li>
-          <li><a href="email-template-billing.html">صورتحساب</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">سطح منو</a>
-        <ul>
-          <li>
-            <a href="#">سطح منو</a>
-            <ul>
-              <li>
-                <a href="#">سطح منو</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </li>
     </ul>
   </div>
+
 </div>
 </div>
 <!-- end::navigation menu -->
