--- a/tiny_mrp/mrp/templates/mrp/tolid/2.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/2.html
@@ -59,12 +59,12 @@
                                 <nav aria-label="Page navigation example">
                                     <ul class="pagination">
                                         <li class="page-item">
-                                            <a class="page-link" href="/Tolid/Daily?date={{prev_date}}" aria-label="Previous">
+                                            <a class="page-link" href="/Tolid/DailyDetails?event_id={{prev_date}}" aria-label="Previous">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left width-15 height-15"><polyline points="15 18 9 12 15 6"></polyline></svg>
                                             </a>
                                         </li>
                                         <li class="page-item">
-                                            <a class="page-link" href="/Tolid/Daily?date={{next_date}}" aria-label="Next">
+                                            <a class="page-link" href="/Tolid/DailyDetails?event_id={{next_date}}" aria-label="Next">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right width-15 height-15"><polyline points="9 18 15 12 9 6"></polyline></svg>
                                             </a>
                                         </li>
@@ -83,57 +83,13 @@
 
 
           </div>
-<div class="row">
-    <div class="col-md-12">
-
-        <div class="card">
-            <div class="card-body">
-                <h6 class="card-title">{{title}}</h6>
-                <div class="table-responsive" tabindex="1" style="overflow: hidden; outline: none;">
-                    <table class="table table-striped table-bordered">
-                        <thead>
-                        <tr class="bg-info">
-                            <th>نام دستگاه</th>
-                            {% for i in shift%}
-                            <th>{{i.name}}</th>
-                            {% endfor %}
-
-                            <th>جمع </th>
-                            <th>راندمان کل</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                            {% for i in machines_with_amar %}
-                        <tr>
-                            <td>{{i.machine.assetName}}</td>
-                            {%for k in i.shift_amar %}
-                            <td>{{k.value}}</td>
-                            {% endfor %}
-                            <td>{{i.sum}}</td>
-                            <td>{{i.max_speed}}</td>
-                        </tr>
-                        {% endfor %}
-
-                        <tfoot>
-                        <tr>
-                          <th>نام دستگاه</th>
-                          {% for i in shift%}
-                          <th>{{i.name}}</th>
-                          {% endfor %}
-
-                          <th>جمع </th>
-                          <th>راندمان کل</th>
-                        </tr>
-                        </tfoot>
-                    </table>
-                </div>
-
-            </div>
-        </div>
 
 
+{% endblock %}
+{% load static %}
 
-    </div>
-</div>
+{% block javascript %}
 
+
+ <script src="{% static 'project/tolid.js' %}"></script>
 {% endblock %}
