--- a/tiny_mrp/mrp/templates/mrp/tolid/daily_details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/daily_details.html
@@ -55,7 +55,7 @@
                                 </div>
                             </form>
                             <div class="app-pager d-flex align-items-center">
-                                <div class="mr-3">1-50 از 253</div>
+                                <div class="mr-3"></div>
                                 <nav aria-label="Page navigation example">
                                     <ul class="pagination">
                                         <li class="page-item">
