--- a/tiny_mrp/mrp/templates/mrp/tolid/daily_analyse_tolid.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/daily_analyse_tolid.html
@@ -6,15 +6,15 @@
                     <div></div>
                     <div class="app-action">
                         <div class="action-left">
-                            <div class="custom-control custom-checkbox mr-3">
+                            <!-- <div class="custom-control custom-checkbox mr-3">
                                 <input type="checkbox" class="custom-control-input" id="customCheckAll">
                                 <label class="custom-control-label" for="customCheckAll"></label>
-                            </div>
+                            </div> -->
                             <ul class="list-inline">
                               <li class="list-inline-item mb-0">
                                 <!-- <button type="button" name="button" class="btn btn-outline-light" id="save_production">ذخیره</button> -->
                               </li>
-                                <li class="list-inline-item mb-0">
+                                <!-- <li class="list-inline-item mb-0">
                                     <a href="#" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
                                         انتخاب بر اساس
                                     </a>
@@ -24,10 +24,10 @@
                                         <a class="dropdown-item" href="#">اسپم</a>
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item text-danger" href="#">حذف</a> -->
-                                    </div>
-                                </li>
+                                    <!-- </div> -->
+                                <!-- </li>  -->
 
-                                <li class="list-inline-item mb-0">
+                                <!-- <li class="list-inline-item mb-0">
                                     <a href="#" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
 چینش                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right">
@@ -37,21 +37,16 @@
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="#">اندازه</a>
                                     </div>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                         <div class="action-right">
                             <form class="d-flex mr-3">
-                                <a href="#" class="app-sidebar-menu-button btn btn-outline-light">
+                                <!-- <a href="#" class="app-sidebar-menu-button btn btn-outline-light">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu width-15 height-15"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
-                                </a>
+                                </a> -->
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="جستجو ایمیل" aria-describedby="button-addon1" id="search" val='{{today}}'>
-                                    <div class="input-group-append">
-                                        <button class="btn btn-outline-light" type="button" id="button-addon1">
-                                            <i class="ti-search"></i>
-                                        </button>
-                                    </div>
+                                  <h3>{{today}}</h3>
                                 </div>
                             </form>
                             <div class="app-pager d-flex align-items-center">
@@ -59,12 +54,12 @@
                                 <nav aria-label="Page navigation example">
                                     <ul class="pagination">
                                         <li class="page-item">
-                                            <a class="page-link" href="/Tolid/DailyDetails?event_id={{prev_date}}" aria-label="Previous">
+                                            <a class="page-link" href="/Tolid/DailyAnalyse?date={{prev_date}}" aria-label="Previous">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left width-15 height-15"><polyline points="15 18 9 12 15 6"></polyline></svg>
                                             </a>
                                         </li>
                                         <li class="page-item">
-                                            <a class="page-link" href="/Tolid/DailyDetails?event_id={{next_date}}" aria-label="Next">
+                                            <a class="page-link" href="/Tolid/DailyAnalyse?date={{next_date}}" aria-label="Next">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right width-15 height-15"><polyline points="9 18 15 12 9 6"></polyline></svg>
                                             </a>
                                         </li>
@@ -88,7 +83,7 @@
 
         <div class="card">
             <div class="card-body">
-                <h6 class="card-title">پایه</h6>
+                <h6 class="card-title">{{title}}</h6>
                 <div class="table-responsive" tabindex="1" style="overflow: hidden; outline: none;">
                     <table class="table table-striped table-bordered">
                         <thead>
