--- a/tiny_mrp/mrp/templates/mrp/tolid/daily_details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/daily_details.html
@@ -6,39 +6,8 @@
                     <div></div>
                     <div class="app-action">
                         <div class="action-left">
-                            <div class="custom-control custom-checkbox mr-3">
-                                <input type="checkbox" class="custom-control-input" id="customCheckAll">
-                                <label class="custom-control-label" for="customCheckAll"></label>
-                            </div>
-                            <ul class="list-inline">
-                              <li class="list-inline-item mb-0">
-                                <!-- <button type="button" name="button" class="btn btn-outline-light" id="save_production">ذخیره</button> -->
-                              </li>
-                                <li class="list-inline-item mb-0">
-                                    <a href="#" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
-                                        انتخاب بر اساس
-                                    </a>
-                                    <div class="dropdown-menu">
-                                        <!-- <a class="dropdown-item" href="#">خوانده شده</a>
-                                        <a class="dropdown-item" href="#">خوانده نشده</a>
-                                        <a class="dropdown-item" href="#">اسپم</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item text-danger" href="#">حذف</a> -->
-                                    </div>
-                                </li>
+                          
 
-                                <li class="list-inline-item mb-0">
-                                    <a href="#" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
-چینش                                     </a>
-                                    <div class="dropdown-menu dropdown-menu-right">
-                                        <a class="dropdown-item" href="#">تاریخ</a>
-                                        <a class="dropdown-item" href="#">از</a>
-                                        <a class="dropdown-item" href="#">موضوغ</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">اندازه</a>
-                                    </div>
-                                </li>
-                            </ul>
                         </div>
                         <div class="action-right">
                             <form class="d-flex mr-3">
@@ -46,12 +15,7 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu width-15 height-15"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                                 </a>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="جستجو ایمیل" aria-describedby="button-addon1" id="search" val='{{today}}'>
-                                    <div class="input-group-append">
-                                        <button class="btn btn-outline-light" type="button" id="button-addon1">
-                                            <i class="ti-search"></i>
-                                        </button>
-                                    </div>
+                                  <h3>{{today}}</h3>
                                 </div>
                             </form>
                             <div class="app-pager d-flex align-items-center">
