--- a/tiny_mrp/mrp/templates/mrp/tolid/daily_analyse_tolid.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/daily_analyse_tolid.html
@@ -99,15 +99,15 @@
                         <tbody>
                             {% for i in machines_with_amar %}
                         <tr>
-                            <td>{{i.machine.assetName}}</td>
-                          <td>{{i.good}}</td>
-                          <td>{{i.mean}}</td>
-                          <td>{{i.bad}}</td>
-                            <td>{{i.real}}</td>
+                            <td class="{{i.css}}">{{i.machine}}</td>
+                          <td class="{{i.css}}">{{i.good}}</td>
+                          <td class="{{i.css}}">{{i.mean}}</td>
+                          <td class="{{i.css}}">{{i.bad}}</td>
+                            <td class="{{i.css}}">{{i.real}}</td>
                             {% if i.kasre_tolid < 0 %}
-                            <td class="bg-dark">{{i.kasre_tolid}}</td>
+                            <td class="bg-dark {{i.css}}" >{{i.kasre_tolid}}</td>
                             {% else %}
-                              <td >{{i.kasre_tolid}}</td>
+                              <td class="{{i.css}}" >{{i.kasre_tolid}}</td>
 
                             {% endif %}
                         </tr>
