--- a/tiny_mrp/mrp/templates/mrp/tolid/monthly_detailed.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/monthly_detailed.html
@@ -9,8 +9,13 @@
         <div class="app-action">
             <div class="action-left">
                 <div class="custom-control custom-checkbox mr-3">
-                    <input type="checkbox" class="custom-control-input" id="customCheckAll">
-                    <label class="custom-control-label" for="customCheckAll"></label>
+                    <select class="form-control" id="22">
+                        <option >انتخاب سال</option>
+                        <option selected value="1402">1402</option>
+                        <option value="1403">1403</option>
+                       
+                      </select>
+                   
                 </div>
                 <ul class="list-inline">
                     <li class="list-inline-item mb-0">
